# NeMo-Agent-Toolkit

./: pyproject.toml
examples/: workflow_as_temporal_example.yml
examples/notebooks/: 1_getting_started_with_nat.ipynb  2_bringing_your_own_agent.ipynb  3_adding_tools_and_agents.ipynb  4_observability_evaluation_and_profiling.ipynb  README.md
src/nat/cli/: entrypoint.py
src/nat/tool/: register.py  workflow_function.py
